--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,50 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  
 }
+
+/*.header__theme-menu-button_type_light {
+  border: 1px solid var(--color-1);
+}*/
+
+:root.theme-light {
+  /* Дублируем переменные для тёмной темы */
+  --background-image: url(../images/cover-image-light.png);
+  --font-size-m: 18px;
+  --line-height-m: 18px;
+  --font-family: 'IBM Plex Mono', sans-serif;
+  --color-1: #353430;
+  --color-text: #353430;
+  --color-switch: #FFC2E6;
+  --color-2: #353430;
+  --line-height-l: 23.4px;
+  --gap-m: 10px;
+  --gap-l: 20px;
+  --color-hover: #353430;
+  --color-shadow: #FF8DCB;
+  --title-color: #FF8DCB;
+}
+
+
+@media (prefers-color-scheme: light) {
+  :root {
+        /* Дублируем переменные светлой темы */
+  --background-image: url(../images/cover-image-light.png);    
+  --font-size-m: 18px;
+  --line-height-m: 18px;
+  --font-family: 'IBM Plex Mono', sans-serif;
+  --color-1: #353430;
+  --color-text: #353430;
+  --color-switch: #FFC2E6;
+  --color-2: #353430;
+  --line-height-l: 23.4px;
+  --gap-m: 10px;
+  --gap-l: 20px;
+  --color-hover: #353430;
+  --color-shadow: #FF8DCB;
+  
+    }
+}
+
+
