--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,40 +9,31 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  
+
   --background-image: url(../images/cover-image-dark.png);
   --font-size-m: 18px;
   --line-height-m: 18px;
   --font-family: 'IBM Plex Mono', sans-serif;
-  --color-1: #FF0070;
-  --color-text: #F1B2CE;
-  --color-switch: #DB00FF;
+  --color-1: #ff0070;
+  --color-text: #f1b2ce;
+  --color-switch: #db00ff;
   --color-2: #000028;
   --line-height-l: 23.4px;
   --gap-m: 10px;
   --gap-l: 20px;
-  --color-hover: #FF007066;
-  --color-shadow: #FF0070;
+  --color-hover: #ff007066;
+  --color-shadow: #ff0070;
 }
 
-/*.header__theme-menu-button_type_dark {
-  border: 1px solid var(--color-1);
-}*/
+.page.theme_dark .decor__element {
+  display: flex;
+}
+
+.page.theme_dark .decor__element::after {
+  content: '';
+  display: flex;
+}
 
 :root.theme-dark {
   /* Дублируем переменные для тёмной темы */
-  --background-image: url(../images/cover-image-dark.png);
-  --font-size-m: 18px;
-  --line-height-m: 18px;
-  --font-family: 'IBM Plex Mono', sans-serif;
-  --color-1: #FF0070;
-  --color-text: #F1B2CE;
-  --color-switch: #DB00FF;
-  --color-2: #000028;
-  --line-height-l: 23.4px;
-  --gap-m: 10px;
-  --gap-l: 20px;
-  --color-hover: #FF007066;
-  --color-shadow: #FF0070;
 }
-
