--- a/styles/style.css
+++ b/styles/style.css
@@ -1,46 +1,43 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
-  
-  min-inline-size: 375px;
+
   background-image: var(--background-image);
+  background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  /*background-color: var(--color-2); */   /* В макете фоном стоит не картинка, а цвет*/
-
-
+  min-inline-size: 375px;
+  /*background-color: var(--color-2); */ /* В макете фоном стоит не картинка, а цвет*/
 }
 
 .title-decor {
   background-color: var(--color-shadow);
-
 }
-
-
 
 .header {
   inline-size: 100%;
+  min-block-size: 668px;
   display: grid;
-  
+
   grid-template-columns: 1fr min-content;
-  grid-template-rows: repeat(auto-fit, min-content);
+
   background-image: var(--background-image);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
+
   padding-inline: 10px;
   padding-block: 10px;
+  position: relative;
 }
 
 .header__theme-menu {
   display: grid;
   grid-column: 2/-1;
-  grid-row: 1/auto;
+  grid-row: 1 / auto;
   margin-block-start: 65px;
-  
+
   inline-size: 70px;
 }
 
@@ -49,9 +46,12 @@
   flex-direction: column;
   gap: var(--gap-m);
   justify-content: center;
+  inline-size: 70px;
+  list-style: none;
+  text-align: center;
+
+  font-weight: 400;
 }
-
-
 
 .header__theme-menu-button {
   display: block;
@@ -68,31 +68,29 @@
   margin-inline-start: auto;
   margin-inline-end: auto;
   inline-size: 100%;
-  padding-block-end: 2px;
+  padding-block-end: 3px;
 }
 
-
-
 .header__theme-menu-button:hover {
-  
-  border: 1px solid var(--color-hover);
-  
+  border: 2px solid var(--color-hover);
 }
 
 .header__theme-menu-button:focus {
   border: none;
-  border-block-end: 1px solid var(--color-1);
+  border-block-end: 3px solid var(--color-1);
 }
 
 .header__theme-menu-button_active {
   pointer-events: none;
+  border: 2px solid var(--color-hover);
 }
 
 .decor__element {
-  
   position: absolute;
-  
+
   inset-inline-end: 19px;
+  inset-block-start: 10px;
+
   width: fit-content;
   font-family: var(--font-family);
   display: flex;
@@ -113,7 +111,6 @@
   box-shadow: 0 0 4px 1px var(--color-1);
   margin-left: 10px;
   margin-top: 8px;
-
 }
 
 .header::before {
@@ -126,7 +123,6 @@
   position: absolute;
   inset-inline-end: 10px;
   inset-block-start: 10px;
-
 }
 
 .header::after {
@@ -137,54 +133,37 @@
   border-bottom: 1px solid var(--color-1);
   border-left: 1px solid var(--color-1);
   position: absolute;
+  inset-block-start: 634px;
   inset-block-end: 10px;
   inset-inline-start: 10px;
-  
-  
-  
-
-}
-
-.header__theme-menu-list {
-  inline-size: 70px;
-  list-style: none;
-  text-align: center;
-  
-  font-weight: 400;
 }
 
 .theme__switch {
   display: grid;
   grid-column: 1/-1;
-  grid-row: 2/auto;
+  grid-row: 2 / auto;
   inline-size: 100%;
   margin-block-start: 65px;
-
 }
 
 .theme__switch__style {
-  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-size: var(--font-size-switch);
   font-weight: 700;
   line-height: 95.7px;
   text-wrap: wrap;
   color: var(--color-switch);
   text-shadow: 4px 4px var(--color-shadow);
-  
-  
+
   font-family: var(--font-family);
-
-
-
 }
 
 .header__title {
   display: grid;
   grid-column: 1/-1;
-  grid-row: 3/auto;
-  
+  grid-row: 3 / auto;
+
   margin-block-start: 55px;
   margin-block-end: 56px;
-  
 }
 
 .header__title__style {
@@ -201,10 +180,8 @@
   grid-template-columns: 1fr;
   gap: 50px;
   inline-size: 100%;
-  
-  padding-inline: 10px;
-  
 
+  padding-inline: 10px;
 }
 
 .content__section {
@@ -213,13 +190,11 @@
   gap: 20px;
   inline-size: 100%;
   line-height: var(--line-height-l);
-  
 }
 
 .content__section:first-of-type {
   margin-block-start: 40px;
 }
-
 
 .content__title {
   display: block;
@@ -229,11 +204,10 @@
   font-weight: bold;
   color: var(--color-1);
   text-align: left;
-  
 }
 
 .main__link {
-  text-shadow: 1px 1px var(--color-1);
+  text-shadow: 2px 2px var(--color-1);
   text-decoration: none;
 }
 
@@ -247,8 +221,6 @@
   outline: 1px solid var(--color-text);
 }
 
-
-
 .content__list {
   display: flex;
   flex-direction: column;
@@ -256,14 +228,12 @@
   list-style: none;
   inline-size: 100%;
   gap: 20px;
-  
 }
 
 .content__list-item {
   display: flex;
   flex-direction: column;
   gap: 10px;
-
 }
 
 .content__section-gallery {
@@ -271,8 +241,6 @@
   flex-direction: column;
   gap: var(--gap-m);
   inline-size: 100%;
-  
-  
 }
 
 .content__list-gallery {
@@ -282,22 +250,17 @@
   list-style: none;
   inline-size: 100%;
   gap: var(--gap-m);
-
 }
 
 .content__list-item-title {
   display: block;
   color: var(--color-2);
-  
+
   font-family: var(--font-family);
   font-size: var(--font-size-m);
   font-weight: bold;
   inline-size: 100%;
-
-
 }
-
-
 
 .content__list-item-text {
   font-family: var(--font-family);
@@ -305,21 +268,15 @@
   font-weight: normal;
   color: var(--color-text);
   text-align: left;
-  
 }
 
 .weight_normal {
   font-weight: normal;
 }
 
-
-
-
 .content__picture {
   display: block;
   inline-size: 100%;
-  
-
 }
 
 .footer {
@@ -327,12 +284,10 @@
   display: flex;
   justify-content: center;
   margin-block-start: 40px;
-  
+
   align-items: center;
   position: relative;
 }
-
-
 
 .footer::after {
   content: '';
@@ -344,8 +299,6 @@
   position: absolute;
   inset-inline-end: 10px;
   inset-block-start: 10px;
-  
-
 }
 
 .footer::before {
@@ -358,52 +311,46 @@
   position: absolute;
   inset-block-end: 10px;
   inset-inline-start: 10px;
-
 }
 
-
-
 .focus_text {
-  
   margin-block-start: 286px;
   margin-block-end: 285px;
-  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-size: var(--font-size-switch);
   font-weight: 700;
   line-height: 95.7px;
   text-wrap: wrap;
   color: var(--color-switch);
   text-align: center;
-  
+
   font-family: var(--font-family);
   text-shadow: 2px 2px var(--color-shadow);
-
 }
-
 
 /*Media*/
 
-@media (width >= 768px ) {
-
+@media (width >= 768px) {
   .header {
     padding: 0;
     display: grid;
-    
+
     grid-template-columns: 1fr min-content min-content;
   }
-  
+
   .decor__element {
     inset-inline-end: 29px;
-    margin-block-start: 20px;
+    inset-block-start: 20px;
   }
-
 
   .header__theme-menu {
     display: grid;
     grid-column: 3/-1;
     margin-block-start: 192px;
     margin-inline-end: 20px;
-    
-    
+  }
+
+  .theme__switch__style {
+    --font-size-switch: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
   .theme__switch {
@@ -412,21 +359,19 @@
 
   .header__title {
     display: grid;
-    grid-column: 2/span 2;
-    grid-row: 3/auto;
+    grid-column: 2 / span 2;
+    grid-row: 3 / auto;
     min-inline-size: 364px;
     margin-block-start: 162px;
-    margin-block-end: 163px;
-    
+    margin-block-end: 183px;
+    margin-inline-end: 20px;
   }
 
   .header::before {
-   
     inset-inline-end: 20px;
     inset-block-start: 20px;
-  
   }
-  
+
   .header::after {
     content: '';
     inline-size: 25px;
@@ -438,14 +383,6 @@
     inset-block-start: 980px;
     inset-block-end: 20px;
     inset-inline-start: 20px;
-    
-  
-  }
-
-  .main__content {
-    display: grid;
-    gap: var(--gap-l);
-    grid-template-columns: ;
   }
 
   .theme__switch__style {
@@ -453,12 +390,10 @@
     line-height: 99px;
   }
 
-  .header__title {
-    margin-inline-end: 20px;
-    margin-block-end: 183px;
-  }
-
   .main__content {
+    display: grid;
+    gap: var(--gap-l);
+    grid-template-columns: 1fr;
     margin-block-start: 60px;
     display: grid;
     padding-inline: 20px;
@@ -476,7 +411,6 @@
 
   .one__column {
     row-gap: 20px;
-    
   }
 
   .content__section:first-of-type {
@@ -486,14 +420,11 @@
   .content__title {
     grid-column: 1/2;
     grid-row: 1/3;
-    
   }
 
   .content__list {
     grid-column: 2/3;
   }
-
-  
 
   .one__column-title {
     grid-column: 1/2;
@@ -506,8 +437,8 @@
   }
 
   .content__section-gallery {
-    
-  } 
+    gap: 20px;
+  }
 
   .content__list-gallery {
     display: grid;
@@ -522,67 +453,158 @@
   }
 
   .sunset {
-    display: grid;
+    gap: 0;
     grid-column: 1/3;
     grid-row: 1/2;
   }
 
   .ice-cream {
-    display: grid;
+    gap: 0;
     grid-column: 3/4;
     grid-row: 1/3;
-    aspect-ratio: 1/2;
   }
 
   .street {
-    display: grid;
+    gap: 0;
     grid-column: 2/4;
     grid-row: 3/4;
   }
 
   .tape {
-    display: grid;
+    gap: 0;
     grid-column: 1/2;
     grid-row: 2/4;
-    
   }
 
   .content__picture {
-    object-fit: fill;
-    
+    object-fit: cover;
+    block-size: 100%;
   }
 
   .books {
-    
-      display: grid;
-      grid-column: 2/3;
-      grid-row: 2/3;
-      
-    
+    gap: 0;
+    grid-column: 2/3;
+    grid-row: 2/3;
   }
 
+  .footer {
+    margin-block-start: 60px;
+  }
 
+  .focus_text {
+    margin-block-start: 463px;
+    margin-block-end: 462px;
+    --font-size-switch: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    line-height: 99px;
+  }
 
- 
+  .footer::after {
+    content: '';
+    inline-size: 25px;
+    block-size: 25px;
+    background-color: transparent;
+    border-top: 1px solid var(--color-1);
+    border-right: 1px solid var(--color-1);
+    position: absolute;
+    inset-inline-end: 20px;
+    inset-block-start: 20px;
+  }
 
-
+  .footer::before {
+    content: '';
+    inline-size: 25px;
+    block-size: 25px;
+    background-color: transparent;
+    border-bottom: 1px solid var(--color-1);
+    border-left: 1px solid var(--color-1);
+    position: absolute;
+    inset-block-end: 20px;
+    inset-inline-start: 20px;
+  }
 }
 
+@media (width >= 1024px) {
+  .header {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: min-content min-content min-content;
+  }
 
+  .header__theme-menu {
+    grid-column: 1/-1;
+    grid-row: 1/2;
+    margin-block-start: 0px;
 
+    inline-size: 230px;
+    padding-block-start: 20px;
+    margin-inline-start: 397px;
+  }
 
+  .header__theme-menu-list {
+    flex-direction: row;
+    inline-size: 230px;
+  }
 
+  .header__theme-menu-button {
+    inline-size: 70px;
+  }
 
+  .theme__switch {
+    grid-column: 1/3;
+    grid-row: 2/3;
+    margin-block-start: 273px;
+  }
 
+  .theme__switch__style {
+    --font-size-switch: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    line-height: 129.53px;
+  }
 
+  .header__title {
+    grid-column: 2/3;
+    grid-row: 3 / auto;
+    margin-block-start: 114px;
+    margin-block-end: 134px;
+    block-size: fit-content;
+  }
 
+  .header::after {
+    content: '';
+    inline-size: 25px;
+    block-size: 25px;
+    background-color: transparent;
+    border-bottom: 1px solid var(--color-1);
+    border-left: 1px solid var(--color-1);
+    position: absolute;
+    inset-block-start: 723px;
+    inset-block-end: 20px;
+    inset-inline-start: 20px;
+  }
 
+  .content__section {
+    grid-template-columns: minmax(315px, 1fr) minmax(649px, 1fr);
+  }
 
+  .one__column {
+  }
 
+  .one__column-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 
+  .content__list-gallery {
+    grid-template-rows: 260px 315px 432px;
+  }
 
+  .street {
+    margin-block-start: 5px;
+  }
 
-  
-
-
-
+  .focus_text {
+    margin-block-start: 319px;
+    margin-block-end: 319px;
+    --font-size-switch: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    line-height: 129.53px;
+  }
+}
