--- a/styles/style.css
+++ b/styles/style.css
@@ -3,12 +3,9 @@
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
 
-  background-image: var(--background-image);
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
+  
   min-inline-size: 375px;
-  /*background-color: var(--color-2); */ /* В макете фоном стоит не картинка, а цвет*/
+  background-color: var(--color-2); 
 }
 
 .title-decor {
@@ -19,14 +16,11 @@
   inline-size: 100%;
   min-block-size: 668px;
   display: grid;
-
   grid-template-columns: 1fr min-content;
-
   background-image: var(--background-image);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-
   padding-inline: 10px;
   padding-block: 10px;
   position: relative;
@@ -37,7 +31,6 @@
   grid-column: 2/-1;
   grid-row: 1 / auto;
   margin-block-start: 65px;
-
   inline-size: 70px;
 }
 
@@ -75,22 +68,20 @@
   border: 2px solid var(--color-hover);
 }
 
-.header__theme-menu-button:focus {
+.header__theme-menu-button:focus-visible {
   border: none;
-  border-block-end: 3px solid var(--color-1);
+  border-block-end: 2px solid var(--color-1);
 }
 
 .header__theme-menu-button_active {
   pointer-events: none;
-  border: 2px solid var(--color-hover);
+  border: 1px solid var(--color-1);
 }
 
 .decor__element {
   position: absolute;
-
   inset-inline-end: 19px;
   inset-block-start: 10px;
-
   width: fit-content;
   font-family: var(--font-family);
   display: flex;
@@ -153,7 +144,6 @@
   text-wrap: wrap;
   color: var(--color-switch);
   text-shadow: 4px 4px var(--color-shadow);
-
   font-family: var(--font-family);
 }
 
@@ -161,7 +151,6 @@
   display: grid;
   grid-column: 1/-1;
   grid-row: 3 / auto;
-
   margin-block-start: 55px;
   margin-block-end: 56px;
 }
@@ -180,7 +169,6 @@
   grid-template-columns: 1fr;
   gap: 50px;
   inline-size: 100%;
-
   padding-inline: 10px;
 }
 
@@ -214,7 +202,7 @@
 .main__link:hover {
   text-decoration: underline;
   text-decoration-skip-ink: 2px;
-  text-decoration-skip-ink: false;
+  
 }
 
 .main__link:focus {
@@ -224,7 +212,6 @@
 .content__list {
   display: flex;
   flex-direction: column;
-  display: flex;
   list-style: none;
   inline-size: 100%;
   gap: 20px;
@@ -246,7 +233,6 @@
 .content__list-gallery {
   display: flex;
   flex-direction: column;
-  display: flex;
   list-style: none;
   inline-size: 100%;
   gap: var(--gap-m);
@@ -322,7 +308,6 @@
   text-wrap: wrap;
   color: var(--color-switch);
   text-align: center;
-
   font-family: var(--font-family);
   text-shadow: 2px 2px var(--color-shadow);
 }
@@ -333,7 +318,7 @@
   .header {
     padding: 0;
     display: grid;
-
+    min-block-size: 1024px;
     grid-template-columns: 1fr min-content min-content;
   }
 
@@ -391,13 +376,12 @@
   }
 
   .main__content {
+    --gap-l: 80px;
     display: grid;
     gap: var(--gap-l);
     grid-template-columns: 1fr;
     margin-block-start: 60px;
-    display: grid;
     padding-inline: 20px;
-    gap: 80px;
   }
 
   .content__section {
@@ -447,12 +431,7 @@
     gap: 20px;
   }
 
-  .content__list-gallery {
-    display: grid;
-    grid-auto-flow: dense;
-  }
-
-  .sunset {
+   .sunset {
     gap: 0;
     grid-column: 1/3;
     grid-row: 1/2;
@@ -526,6 +505,7 @@
 @media (width >= 1024px) {
   .header {
     display: grid;
+    min-block-size: 768px;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: min-content min-content min-content;
   }
@@ -583,9 +563,6 @@
 
   .content__section {
     grid-template-columns: minmax(315px, 1fr) minmax(649px, 1fr);
-  }
-
-  .one__column {
   }
 
   .one__column-list {
