--- a/styles/light.css
+++ b/styles/light.css
@@ -17,12 +17,14 @@
   --color-text: #353430;
   --color-switch: #ffc2e6;
   --color-2: #FFF1F7;
+  --color-list-title: #353430;
   --line-height-l: 23.4px;
   --gap-m: 10px;
   --gap-l: 20px;
   --color-hover: #32312D66;
   --color-shadow: #ff8dcb;
   --title-color: #ff8dcb;
+  --color-link-shadow: #FF8DCB;
 }
 
 :root.theme-light {
@@ -46,6 +48,7 @@
     --line-height-m: 18px;
     --font-family: 'IBM Plex Mono', sans-serif;
     --color-1: #353430;
+    --color-link-shadow: #FF8DCB;
     --color-text: #353430;
     --color-switch: #ffc2e6;
     --color-2: #FFF1F7;
@@ -54,6 +57,7 @@
     --gap-l: 20px;
     --color-hover: #32312D66;
     --color-shadow: #ff8dcb;
+    --color-list-title: #353430;
   }
 
   .decor__element {
