--- a/styles/variables.css
+++ b/styles/variables.css
@@ -12,11 +12,12 @@
   --color-text: #f1b2ce;
   --color-switch: #db00ff;
   --color-2: #000028;
-  --font-size-switch: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  --color-list-title: #000028;
   --line-height-l: 23.4px;
   --gap-m: 10px;
   --gap-l: 20px;
   --color-hover: #ff007066;
   --color-shadow: #ff0070;
-  --color-list-title: #353430;
+  --color-link-shadow: #ff0070;
+  --font-size-switch: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
 }
