--- a/styles/light.css
+++ b/styles/light.css
@@ -16,14 +16,14 @@
   --color-1: #353430;
   --color-text: #353430;
   --color-switch: #ffc2e6;
-  --color-2: #FFF1F7;
+  --color-2: #fff1f7;
   --color-list-title: #353430;
   --line-height-l: 23.4px;
   --gap-m: 10px;
   --gap-l: 20px;
-  --color-hover: #32312D66;
+  --color-hover: #32312d66;
   --color-shadow: #ff8dcb;
-  --color-link-shadow: #FF8DCB;
+  --color-link-shadow: #ff8dcb;
   --font-size-switch: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
 }
 
@@ -50,14 +50,14 @@
     --color-1: #353430;
     --color-text: #353430;
     --color-switch: #ffc2e6;
-    --color-2: #FFF1F7;
+    --color-2: #fff1f7;
     --color-list-title: #353430;
     --line-height-l: 23.4px;
     --gap-m: 10px;
     --gap-l: 20px;
-    --color-hover: #32312D66;
+    --color-hover: #32312d66;
     --color-shadow: #ff8dcb;
-    --color-link-shadow: #FF8DCB;
+    --color-link-shadow: #ff8dcb;
     --font-size-switch: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   }
 
