--- a/styles/style.css
+++ b/styles/style.css
@@ -4,10 +4,11 @@
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
   box-sizing: border-box;
   background-image: var(--background-image);
+  background-size: cover;
   background-position: center;
   background-attachment: fixed;
-   /*background-color: var(--color-2); */  
-   /*inline-size: calc(100vw - 0.2px); /* Почему-то браузер добавляет 0,2 пикселя*/
+  /*background-color: var(--color-2); */
+  /*inline-size: calc(100vw - 0.2px); /* Почему-то браузер добавляет 0,2 пикселя*/
 }
 
 .title-decor {
@@ -16,25 +17,16 @@
 
 .header {
   inline-size: 100%;
+  height: 100vh;
   box-sizing: border-box;
   min-block-size: 668px;
   display: grid;
-  grid-template-columns: 1fr min-content;
-  background-image: var(--background-image);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  grid-template-rows: 1fr min-content 1fr;
+  align-items: center;
+  justify-items: flex-end;
   padding-inline: 10px;
   padding-block: 10px;
   position: relative;
-}
-
-.header__theme-menu {
-  display: grid;
-  grid-column: 2/-1;
-  grid-row: 1 / auto;
-  margin-block-start: 65px;
-  inline-size: 70px;
 }
 
 .header__theme-menu-list {
@@ -45,7 +37,6 @@
   inline-size: 70px;
   list-style: none;
   text-align: center;
-
   font-weight: 400;
 }
 
@@ -73,6 +64,7 @@
 
 .header__theme-menu-button:focus-visible {
   border: none;
+  outline: none;
   border-block-end: 2px solid var(--color-1);
 }
 
@@ -134,11 +126,7 @@
 }
 
 .theme__switch {
-  display: grid;
-  grid-column: 1/-1;
-  grid-row: 2 / auto;
   inline-size: 100%;
-  margin-block-start: 65px;
 }
 
 .theme__switch__style {
@@ -152,11 +140,7 @@
 }
 
 .header__title {
-  display: grid;
-  grid-column: 1/-1;
-  grid-row: 3 / auto;
-  margin-block-start: 55px;
-  margin-block-end: 56px;
+  inline-size: 100%;
 }
 
 .header__title__style {
@@ -210,9 +194,7 @@
 }
 
 .main__link:hover {
-  text-decoration: underline;
-  text-decoration-skip-ink: auto;
-  text-underline-offset: 2px;
+  border-block-end: 1px solid var(--color-text);
 }
 
 .main__link:focus {
@@ -280,8 +262,10 @@
 .footer {
   inline-size: 100%;
   box-sizing: border-box;
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-rows: 667px;
+  justify-items: center;
+  align-items: center;
   margin-block-start: 40px;
   align-items: center;
   position: relative;
@@ -314,14 +298,11 @@
 }
 
 .focus_text {
-  margin-block-start: 286px;
-  margin-block-end: 285px;
   font-size: var(--font-size-switch);
   font-weight: 700;
   line-height: 95.7px;
   text-wrap: wrap;
   color: var(--color-switch);
-  text-align: center;
   font-family: var(--font-family);
   text-shadow: 2px 2px var(--color-shadow);
 }
@@ -331,9 +312,9 @@
 @media (width >= 768px) {
   .header {
     padding: 0;
-    display: grid;
-    min-block-size: 1024px;
-    grid-template-columns: 1fr min-content min-content;
+    padding-inline-end: 20px;
+    padding-block: 20px;
+    grid-template-rows: 1fr min-content 1fr;
   }
 
   .decor__element {
@@ -342,10 +323,6 @@
   }
 
   .header__theme-menu {
-    display: grid;
-    grid-column: 3/-1;
-    margin-block-start: 192px;
-    margin-inline-end: 20px;
   }
 
   .theme__switch__style {
@@ -353,18 +330,8 @@
     line-height: 99px;
   }
 
-  .theme__switch {
-    margin-block-start: 173px;
-  }
-
   .header__title {
-    display: grid;
-    grid-column: 2 / span 2;
-    grid-row: 3 / auto;
-    min-inline-size: 364px;
-    margin-block-start: 162px;
-    margin-block-end: 183px;
-    margin-inline-end: 20px;
+    max-inline-size: 364px;
   }
 
   .header::before {
@@ -445,7 +412,7 @@
     gap: 20px;
   }
 
-   .sunset {
+  .sunset {
     gap: 0;
     grid-column: 1/3;
     grid-row: 1/2;
@@ -483,11 +450,10 @@
   .footer {
     inline-size: 100%;
     margin-block-start: 60px;
+    grid-template-rows: 1024px;
   }
 
   .focus_text {
-    margin-block-start: 463px;
-    margin-block-end: 462px;
     --font-size-switch: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     line-height: 99px;
   }
@@ -519,20 +485,15 @@
 
 @media (width >= 1024px) {
   .header {
-    display: grid;
-    min-block-size: 768px;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: min-content min-content min-content;
+    grid-template-rows: 1fr min-content 1fr;
+    align-items: center;
+    justify-items: flex-end;
   }
 
   .header__theme-menu {
-    grid-column: 1/-1;
-    grid-row: 1/2;
-    margin-block-start: 0px;
-
-    inline-size: 230px;
-    padding-block-start: 20px;
-    margin-inline-start: 397px;
+    align-self: flex-start;
+    justify-self: center;
+    margin-block-start: 20px;
   }
 
   .header__theme-menu-list {
@@ -544,23 +505,15 @@
     inline-size: 70px;
   }
 
-  .theme__switch {
-    grid-column: 1/3;
-    grid-row: 2/3;
-    margin-block-start: 273px;
-  }
-
   .theme__switch__style {
     --font-size-switch: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     line-height: 129.53px;
   }
 
   .header__title {
-    grid-column: 2/3;
-    grid-row: 3 / auto;
-    margin-block-start: 114px;
-    margin-block-end: 134px;
+    max-inline-size: 491px;
     block-size: fit-content;
+    margin-block-end: 20px;
   }
 
   .header::after {
@@ -593,9 +546,11 @@
     margin-block-start: 5px;
   }
 
+  .footer {
+    grid-template-rows: 768px;
+  }
+
   .focus_text {
-    margin-block-start: 319px;
-    margin-block-end: 319px;
     --font-size-switch: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     line-height: 129.53px;
   }
