--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,14 +6,14 @@
 :root {
   --background-image: url(../images/cover-image-dark.png);
   --font-size-m: 18px;
-  --line-height-m: 18px;
+  --line-height-m: 1.125rem;
   --font-family: 'IBM Plex Mono', sans-serif;
   --color-1: #ff0070;
   --color-text: #f1b2ce;
   --color-switch: #db00ff;
   --color-2: #000028;
   --color-list-title: #000028;
-  --line-height-l: 23.4px;
+  --line-height-l: 1.4625rem;
   --gap-m: 10px;
   --gap-l: 20px;
   --color-hover: #ff007066;
